fixing more UX concerns, about the design on small heighted screen

--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ display: flex;
 justify-content: center;
 align-items: center;
 flex-direction: column;
+height: 100%;
+overflow: scroll;
 }
 
 main.container {
@@ -57,7 +59,8 @@ grid-template-areas: "fa fa fb fc" "sa sb sb fc";
 grid-template-columns: repeat(4, 1fr);
 grid-template-rows: repeat(2, 1fr);
 width: 70vw;
-height: 70vh;
+height: 70%;
+min-height: 635px;
 margin: 10vh auto auto;
 gap: 2rem;
 }
@@ -159,10 +162,9 @@ color: var(--rich-black);
 }
 
 .attribution {
+padding: 2rem;
 font-size: 1rem;
 text-align: center;
-position: absolute;
-bottom: 2rem;
 }
 
 .attribution a {
